add Twilio methods, need to add a view to add users to a game

--- a/config/application.yml
+++ b/config/application.yml
@@ -4,3 +4,4 @@ FACEBOOK_APP_ID: "231758050606"
 FACEBOOK_SECRET: "1e8fb7a07d232c9296e268e55f3901f3"
 TWILIO_ACCOUNT_SID: "ACc5ca5ade8d4d9cdc62e395501e03ea49"
 TWILIO_AUTH_TOKEN: "4628aa426e731ba8a82bd23a253298a8"
+PHONE: "+15054920757"
