vendor compiled assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,10 +1,12 @@
 ---
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-73e17781f9c31fc71eed70515bc23af0.js
-application/index.js: application-73e17781f9c31fc71eed70515bc23af0.js
-application.css: application-c628700a04c58d9515c358df731ea866.css
-application/index.css: application-c628700a04c58d9515c358df731ea866.css
+application.js: application-d8f5959f01bbd66fd592f73d0730d549.js
+application/index.js: application-d8f5959f01bbd66fd592f73d0730d549.js
+application.css: application-5a28ef7ec8fa946a21ffe6972fae2717.css
+application/index.css: application-5a28ef7ec8fa946a21ffe6972fae2717.css
+sketch.js: sketch-fc2ecbe81549d86efec9b5157395e1e1.js
+sketch/index.js: sketch-fc2ecbe81549d86efec9b5157395e1e1.js
 fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
 fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
